syntax = "proto3";

package weather;

service WeatherService {
  rpc GetCurrentWeather (WeatherRequest) returns (WeatherResponse);
  rpc ValidateCity(ValidateCityRequest) returns (ValidateCityResponse);
}

message WeatherRequest {
  string city = 1;
}

message WeatherResponse {
  string temperature = 2;
  string humidity = 3;
  string description = 4;
}

message ValidateCityRequest {
  string city = 1;
}

message ValidateCityResponse {
  bool isValid = 1;
}
